[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/player_status/PlayerStatus.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/gui_manager.gd" type="Script" id=2]

[node name="GuiManager" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PassengerMargin" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -309.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 572.0

[node name="PassengerContainer" type="VBoxContainer" parent="PassengerMargin"]
margin_right = 299.0
margin_bottom = 562.0

[node name="PlayerStatus" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
